website-deployment/k8s-manifests/overlays/pre-prod/deployment-container-version-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playtechnique-website

spec:
  template:
    spec:
      containers:
      - name: website
        image: docker.io/playtechnique/website:2
        command: ["/andrew", "/website", "0.0.0.0:8080", "https://preprod.playtechnique.io"]
