website-deployment/k8s-manifests/overlays/pre-prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pt-website-ingress
spec:
  rules:
  - host: preprod.playtechnique.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pt-service
            port:
              number: 8080
  tls:
  - hosts:
    - preprod.playtechnique.io
